--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
         "ups",
         "shipping"
     ],
-    "homepage": "https://github.com/TheGraceCompany/ups",
+    "homepage": "https://github.com/thegracecompany/ups",
     "license": "MIT",
     "authors": [
         {
